<resources>
    <string name="app_name">Eazy List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_pay">Remove Ads</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_set">Change Theme</string>
    <string name="menu_help">Help / Code</string>

    <string name="activity_title_pay">Remove Ads</string>
    <string name="activity_title_help">Usage</string>

    <string name="set_theme">Change Theme</string>
    <string name="theme_purple">PURPLE</string>
    <string name="theme_blue">BLUE</string>
    <string name="theme_dark">DARK</string>
    <string name="set_ok">done</string>
    <string name="set_cancel">cancel</string>

    <string name="reset_title">Delete All Items</string>
    <string name="reset_yes">yes</string>
    <string name="reset_no">no</string>

    <string name="tab_day">DAY</string>
    <string name="tab_week">WEEK</string>
    <string name="tab_month">MONTH</string>

    <string name="item_add_title">New Item</string>
    <string name="item_add_ok">add</string>
    <string name="item_add_cancel">cancel</string>
    <string name="item_add_hint">enter...</string>

    <string name="item_task_title">Select Task</string>
    <string name="item_task_copy">copy</string>
    <string name="item_task_delete">delete</string>
    <string name="item_task_modify">modify</string>
    <string name="item_task_copy_done">Copied To Clip Board</string>

    <string name="item_done">done</string>
    <string name="item_cancel">cancel</string>

    <string name="memo_view_title">memo</string>
    <string name="memo_edit_hint">enter...</string>
    <string name="memo_edit_title">Edit Memo</string>
    <string name="memo_edit_done">done</string>
    <string name="memo_edit_cancel">cancel</string>
    <string name="memo_edit_textwatcher_tail">lines</string>

    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="Null">Null</string>

    <string name="help">https://github.com/wyuinche/eazy-list/blob/main/README.md</string>

    <string name="OSS">Open Source License</string>

</resources>