<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/change_theme_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/text_margin_medium"
        android:textSize="@dimen/text_size_small"
        android:padding="@dimen/text_padding_large"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/change_theme_purple"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_400"
            android:text="@string/theme_purple" />

        <RadioButton
            android:id="@+id/change_theme_blue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/mid_blue_500"
            android:text="@string/theme_blue" />

        <RadioButton
            android:id="@+id/change_theme_dark"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/theme_dark" />
    </RadioGroup>
</LinearLayout>