<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.week.WeekFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/week_leftButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/left_off" />

            <TextView
                android:id="@+id/week_dateTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="yyyy / MM (n)" />

            <ImageView
                android:id="@+id/week_rightButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/right_off" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="1dp"
                    android:background="@drawable/week_day_title_box"
                    android:textSize="@dimen/item_box_week_text_size"/>

                <ListView
                    android:id="@+id/week_sunday_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="@dimen/item_day_divider_height"
                    android:divider="@color/transparent"
                    android:gravity="center_horizontal|top"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="1dp"
                    android:background="@drawable/week_day_title_box"
                    android:textSize="@dimen/item_box_week_text_size"/>
                <ListView
                    android:id="@+id/week_monday_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="@dimen/item_day_divider_height"
                    android:divider="@color/transparent"
                    android:gravity="center_horizontal|top"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="1dp"
                    android:background="@drawable/week_day_title_box"
                    android:textSize="@dimen/item_box_week_text_size"/>
                <ListView
                    android:id="@+id/week_tuesday_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="@dimen/item_day_divider_height"
                    android:divider="@color/transparent"
                    android:gravity="center_horizontal|top"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="1dp"
                    android:background="@drawable/week_day_title_box"
                    android:textSize="@dimen/item_box_week_text_size"/>
                <ListView
                    android:id="@+id/week_wednesday_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="@dimen/item_day_divider_height"
                    android:divider="@color/transparent"
                    android:gravity="center_horizontal|top"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="1dp"
                    android:background="@drawable/week_day_title_box"
                    android:textSize="@dimen/item_box_week_text_size"/>
                <ListView
                    android:id="@+id/week_thursday_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="@dimen/item_day_divider_height"
                    android:divider="@color/transparent"
                    android:gravity="center_horizontal|top"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="1dp"
                    android:background="@drawable/week_day_title_box"
                    android:textSize="@dimen/item_box_week_text_size"/>
                <ListView
                    android:id="@+id/week_friday_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="@dimen/item_day_divider_height"
                    android:divider="@color/transparent"
                    android:gravity="center_horizontal|top"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="1dp"
                    android:background="@drawable/week_day_title_box"
                    android:textSize="@dimen/item_box_week_text_size"/>
                <ListView
                    android:id="@+id/week_saturday_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="@dimen/item_day_divider_height"
                    android:divider="@color/transparent"
                    android:gravity="center_horizontal|top"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>