<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.month.MonthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/month_leftButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_left_off" />

            <TextView
                android:id="@+id/month_dateTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textColor="?attr/colorControlNormal"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/month_rightButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_right_off" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding_small">

            <TextView
                android:id="@+id/month_sunday_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_small"
                android:background="@drawable/week_day_title_box"
                android:gravity="center"
                android:textColor="?attr/colorControlActivated"
                android:text="@string/sunday"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_monday_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_small"
                android:background="@drawable/week_day_title_box"
                android:gravity="center"
                android:textColor="?attr/colorControlActivated"
                android:text="@string/monday"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_tuesday_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_small"
                android:background="@drawable/week_day_title_box"
                android:gravity="center"
                android:textColor="?attr/colorControlActivated"
                android:text="@string/tuesday"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_wednesday_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_small"
                android:background="@drawable/week_day_title_box"
                android:gravity="center"
                android:textColor="?attr/colorControlActivated"
                android:text="@string/wednesday"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_thursday_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_small"
                android:background="@drawable/week_day_title_box"
                android:gravity="center"
                android:textColor="?attr/colorControlActivated"
                android:text="@string/thursday"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_friday_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_small"
                android:background="@drawable/week_day_title_box"
                android:gravity="center"
                android:textColor="?attr/colorControlActivated"
                android:text="@string/friday"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_saturday_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_small"
                android:background="@drawable/week_day_title_box"
                android:gravity="center"
                android:text="@string/saturday"
                android:textColor="?attr/colorControlActivated"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/month_calendar_background"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/month_sunday_listView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin_small"
                    android:divider="@color/transparent"
                    android:dividerHeight="@dimen/divider_height"  />

                <ListView
                    android:id="@+id/month_monday_listView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin_small"
                    android:divider="@color/transparent"
                    android:dividerHeight="@dimen/divider_height" />

                <ListView
                    android:id="@+id/month_tuesday_listView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin_small"
                    android:divider="@color/transparent"
                    android:dividerHeight="@dimen/divider_height"  />

                <ListView
                    android:id="@+id/month_wednesday_listView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin_small"
                    android:divider="@color/transparent"
                    android:dividerHeight="@dimen/divider_height"  />

                <ListView
                    android:id="@+id/month_thursday_listView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin_small"
                    android:divider="@color/transparent"
                    android:dividerHeight="@dimen/divider_height" />

                <ListView
                    android:id="@+id/month_friday_listView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin_small"
                    android:divider="@color/transparent"
                    android:dividerHeight="@dimen/divider_height" />

                <ListView
                    android:id="@+id/month_saturday_listView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/text_margin_small"
                    android:divider="@color/transparent"
                    android:dividerHeight="@dimen/divider_height" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin_medium">

                    <LinearLayout
                        android:id="@+id/month_memo_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:background="@drawable/month_memo" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/text_padding_small"
                            android:text="@string/memo_view_title"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="@dimen/text_size_big"
                            android:textStyle="bold" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/month_memo_textView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="@dimen/text_padding_big"
                                android:lineSpacingMultiplier="1.5"
                                android:textColor="?attr/colorSurface"
                                android:textSize="@dimen/text_size_medium" />
                        </ScrollView>
                    </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/month_backButton"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_margin="@dimen/fab_margin"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_today_off" />

        <ImageView
            android:id="@+id/month_addButton"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_margin="@dimen/fab_margin"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_off" />
    </LinearLayout>
</FrameLayout>